--- a/LabAssisgnment030415/index.html
+++ b/LabAssisgnment030415/index.html
@@ -3,8 +3,12 @@
 <head>
     <title></title>
     <script src="bower_components/angular/angular.js"></script>
+    <script>var HelloCtrl = function ($scope) {
+        $scope.name = 'World';
+    };</script>
 </head>
-<body ng-app>
+<body>
+<div ng-app>
 <h1>PROTOTYPE CR & DR MANAGEMENT </h1>
 
 <form action="">
@@ -39,19 +43,17 @@
     <h1>Hello, {{name}}!</h1>
 </div>
 
-<div ng-app>
+<div>
     Write your name:
     <input type="text" ng-model="sometext" />
     <h1>Hello <div ng-show="sometext"> {{ sometext }} are you genius??? asked by Roll::2700</div></h1>
 </div>
-
+</div>
 
 
 <script type="text/javascript">
 
-    var HelloCtrl = function ($scope) {
-        $scope.name = 'World';
-    };
+
 
     var customersVar = [];
     function customersFunc(){
